# sr

./: README.md
dsa/quicksort/: README.md
dsa/quicksort/answer/: quicksort.go
dsa/quicksort/playground/: quicksort_test.go  utils.go
formation/text-justification/: README.md  shell.nix
formation/text-justification/answer/: main.go
formation/text-justification/playground/: main.go
ml/micrograd/: .gitignore  pyproject.toml
ml/micrograd/src/micrograd/: main.py  value.py
quicksort/answer/: quicksort.go  quicksort_test.go
quicksort/playground/: go.mod  quicksort.go
